--- a/vue-spa/package.json
+++ b/vue-spa/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite build --watch"
     },
     "devDependencies": {
         "axios": "^1.1.2",
@@ -10,6 +11,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "npm-watch": "^0.11.0",
         "vue": "^3.2.47",
         "vue-router": "^4.1.6"
     }
