--- a/vue-spa/package.json
+++ b/vue-spa/package.json
@@ -11,8 +11,10 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@vitejs/plugin-vue": "^4.1.0",
         "npm-watch": "^0.11.0",
-        "vue": "^3.2.47",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6"
     }
 }
