--- a/vue-spa/package.json
+++ b/vue-spa/package.json
@@ -1,23 +1,28 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "watch": "vite build --watch"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.14",
-        "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.22",
-        "tailwindcss": "^3.3.1",
-        "vite": "^4.0.0"
-    },
-    "dependencies": {
-        "@vitejs/plugin-vue": "^4.1.0",
-        "npm-watch": "^0.11.0",
-        "typescript": "^5.0.4",
-        "vue": "^3.2.36",
-        "vue-loader": "^17.0.1",
-        "vue-router": "^4.1.6"
-    }
+  "private": true,
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "watch": "vite build --watch"
+  },
+  "dependencies": {
+    "@vitejs/plugin-vue": "^4.1.0",
+    "autoprefixer": "^10",
+    "npm-watch": "^0.11.0",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "typescript": "^5.0.4",
+    "vue": "^3.2.36",
+    "vue-loader": "^17.0.1",
+    "vue-router": "^4.1.6"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "laravel-mix": "^6.0.49",
+    "laravel-vite-plugin": "^0.7.2",
+    "postcss": "^8.4.22",
+    "tailwindcss": "^3.3.1",
+    "vite": "^4.0.0",
+    "vue-cli-plugin-tailwind": "~3.0.0"
+  }
 }
